--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "sass": "^1.77.6",
     "socket-io": "^1.0.0",
     "socket.io-client": "^4.7.5"
   }
